# SimpleStockExchange

./: CMakeLists.txt  Dockerfile  Dockerfile.postgres  Makefile  README.md  db_init.sql  docker-compose.yml  main.cpp  main_client.cpp
Client/: Client.cpp  Client.hpp
Connection/: Connection.cpp  Connection.hpp
Controller/: BidController.cpp  BidController.hpp  ClientController.cpp  ClientController.hpp  ControllerMapping.cpp  ControllerMapping.hpp  TransactionController.cpp  TransactionController.hpp  UserController.cpp  UserController.hpp
Controllers/: Handlers.hpp  TransactionCrudController.cpp  TransactionCrudController.hpp  UserCrudController.cpp  UserCrudController.hpp
HTTP/: Http.hpp
Repository/: BalanceRepository.cpp  BalanceRepository.hpp  BdNames.hpp  BidRepository.cpp  BidRepository.hpp  DatabaseImpl.hpp  DatabaseInterface.hpp  Handlers.hpp  TransactionRepository.cpp  TransactionRepository.hpp  UserRepository.cpp  UserRepository.hpp
Server/: CallClient.cpp  CallClient.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp
Service/: BalanceService.hpp  BalanceServiceInterface.hpp  BidService.cpp  BidService.hpp  BidServiceInterface.hpp  TransactionService.cpp  TransactionService.hpp  TransactionServiceInterface.hpp  UserService.cpp  UserService.hpp  UserServiceInterface.hpp
Tests/: BD_Tests.cpp  Controller_Tests.cpp  Service_Tests.cpp
Utility/: Binder.hpp  ClientDisplayMessages.hpp  Encoder.hpp  ExtraJSONKeys.hpp  RequestBuilder.cpp  RequestBuilder.hpp  ResponseError.hpp  ResponseParser.cpp  ResponseParser.hpp  ServerMessage.cpp  ServerMessage.hpp  ThreadSafeQ.hpp  Timestamper.hpp  UUIDGenerator.hpp
View/: BidTransactionMadePopup.cpp  BidTransactionMadePopup.hpp  BidTransactionMadePopup.ui  CMakeLists.txt  ChangeNamPopup.cpp  ChangeNamPopup.hpp  ChangeNamPopup.ui  ChangePassPopup.cpp  ChangePassPopup.hpp  ChangePassPopup.ui  CreateBidPopup.cpp  CreateBidPopup.hpp  CreateBidPopup.ui  DeleteAccountPopup.cpp  DeleteAccountPopup.hpp  DeleteAccountPopup.ui  LoginPopup.cpp  LoginPopup.hpp  LoginPopup.ui  PasswordConfirmationPopup.cpp  PasswordConfirmationPopup.hpp  PasswordConfirmationPopup.ui  QuotationsPopup.cpp  QuotationsPopup.hpp  QuotationsPopup.ui  RegisterPopup.cpp  RegisterPopup.hpp  RegisterPopup.ui  UpdateBidPopup.cpp  UpdateBidPopup.hpp  UpdateBidPopup.ui  UserSettings.cpp  UserSettings.hpp  UserSettings.ui  ViewBids.cpp  ViewBids.hpp  ViewBids.ui  ViewTransactionsPopup.cpp  ViewTransactionsPopup.hpp  main.cpp  (+4 more)
View/resources/: [pornolab.net].t2997450.torrent
